Switch to using `setRecipe` instead of `onDisplayedIngredientsUpdate` for focus based recipe filtering
Should be notably faster since it runs once per recipe lookup instead of once per second
Still want the update for the inputs to output logic, since that needs to be dynamic.
Will do the same for modifier recipes after resolving an issue caused by the migration